src/log/combined-all.metagpu5.3422473.err
  File "main.py", line 249
    exp_name = f'EXP{exp_no}'
                            ^
SyntaxError: invalid syntax
